--- a/Documents/Forritun med Cursor/NewVinland2024/package.json
+++ b/Documents/Forritun med Cursor/NewVinland2024/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "your-project-name",
+  "version": "1.0.0",
+  "private": true,
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
